[package]
name = "untitled"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
cpal = "0.17.3"
anyhow = "1"
dasp = { version = "0.11", features = ["signal", "slice"] }
#dasp = { version = "0.11", path = "../dasp", features = ["all"] }
find_folder = "0.3"
hound = "3"

[[bin]]
name = "untitled"
path = "main.rs"

[[bin]]
name = "dspsin"
path = "dspprocessing.rs"


[[bin]]
name = "dspcos"
path = "dspprocessingcosine.rs"

